--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "devStart": "nodemon server.js",
-    "build": "webpack --mode production --progress"
+    "build": "webpack --mode production --progress",
+    "test": "jest --runInBand ./test"
   },
   "author": "",
   "license": "ISC",
@@ -18,8 +19,14 @@
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
+    "jest": "^25.4.0",
+    "mongodb-memory-server": "^6.5.2",
     "nodemon": "^2.0.3",
+    "supertest": "^4.0.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
