--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "devStart": "nodemon server.js",
-    "start": "node server.js",
+    "dev": "nodemon server/server.js",
+    "start": "node server/server.js",
     "test": "mocha --exit --timeout 10000",
+    "lint": "eslint ./server",
+    "lint:fix": "eslint --fix ./server",
+    "prettier:check": "prettier ./server --check",
+    "prettier:write": "prettier ./server --write",
     "build": "webpack --mode production --progress"
   },
   "author": "",
@@ -23,7 +27,9 @@
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
+    "eslint": "^6.8.0",
     "nodemon": "^2.0.3",
+    "prettier": "^2.0.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   }
