--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "devStart": "nodemon server.js",
+    "lint:fix": "eslint --fix ./server",
+    "prettier": "prettier ./server --write",
     "build": "webpack --mode production --progress"
   },
   "author": "",
@@ -18,7 +20,9 @@
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
+    "eslint": "^6.8.0",
     "nodemon": "^2.0.3",
+    "prettier": "^2.0.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   }
