added limit and fixed minor bugs

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 DATABASE_URL='mongodb://localhost/testapi'
-TEST_DATABASE_URL=''mongodb://localhost/devtestapi'
+TEST_DATABASE_URL='mongodb://localhost/devtestapi'
