--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -35,3 +35,9 @@ jobs:
     - run: npm test --if-present
       env:
         CI: true
+    - uses: codecov/codecov-action@v1.0.6
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+        file: ./coverage/coverage-final.json # optional
+        name: Test-coverage # optional
+        fail_ci_if_error: true # optional (default = false)   
