--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -33,14 +33,9 @@ jobs:
     - run: npm install
     - run: npm run build --if-present
     - run: npm test --if-present
-      env:
-        CI: true
-    - uses: codecov/codecov-action@v1.0.6
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
-        file: ./.nyc_output/*.json # optional
-        name: Test-coverage # optional
-        fail_ci_if_error: true # optional (default = false)   
     - run: npm run test-coverage --if-present
     - run: npm run codecov -t ${{ secrets.CODECOV_TOKEN }} --if-present
     - run: codecov --token=${{ secrets.CODECOV_TOKEN }}
+    - run : bash <(curl -s https://codecov.io/bash) -t ${{ secrets.CODECOV_TOKEN }}
+    env:
+        CI: true
