--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -34,7 +34,7 @@ jobs:
     - run: npm run build --if-present
     - run: npm test --if-present
     - run: npm run test-coverage --if-present
-    - run: npm run codecov -t ${{ secrets.CODECOV_TOKEN }} --if-present
+    - run: PORT=${{ secrets.CODECOV_TOKEN }} npm run codecov --if-present
     - run: codecov --token=${{ secrets.CODECOV_TOKEN }}
     - run : bash <(curl -s https://codecov.io/bash) -t ${{ secrets.CODECOV_TOKEN }}
     env:
