--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -33,6 +33,7 @@ jobs:
     - run: npm install
     - run: npm run build --if-present
     - run: npm test --if-present
+    - run: npm run test-jest --if-present
     - run: npm run test-coverage --if-present
     - run: PORT=${{ secrets.CODECOV_TOKEN }} npm run codecov --if-present
     env:
