upload jest coverage also

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -33,7 +33,9 @@ jobs:
     - run: npm install
     - run: npm run build --if-present
     - run: npm test --if-present
-    - run: npm run test-jest --if-present
+    - run: npm run lint --if-present
+    - run: npm run prettier:check --if-present
+    - run: TOKEN=${{ secrets.CODECOV_TOKEN }} npm run test:jest:codecov --if-present
     - run: npm run test-coverage --if-present
     - run: PORT=${{ secrets.CODECOV_TOKEN }} npm run codecov --if-present
     env:
