--- a/package.json
+++ b/package.json
@@ -20,14 +20,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "babel-loader": "^8.1.0",
+    "bcrypt": "^4.0.1",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mocha": "^7.1.1",
-    "mongoose": "^5.9.10"
+    "mongoose": "^5.9.10",
+    "redoc": "^2.0.0-rc.28",
+    "swagger-jsdoc": "^4.0.0"
   },
   "devDependencies": {
     "codecov": "^3.6.5",
