--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mocha": "^7.1.1",
     "mongoose": "^5.9.10",
